Agregando atributos css

--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -2,7 +2,8 @@
 $fisrtcolor     :   #F4F4F4;
 $secondcolor    :   #89CEFD;
 $thirdcolor     :   #316099;
-$fourhtcolor    :   #3B577B;              
+$fourhtcolor    :   #3B577B;    
+$fifhtcolor     :   #606060;          
 
 // Tamaño de fuente
 $xxl    :   24px;
