--- a/scss/modules/main/_main.scss
+++ b/scss/modules/main/_main.scss
@@ -1,4 +1,4 @@
-.main {
+.main, .searching {
     display: flex;
     justify-content: center;
     background: skyblue;
@@ -8,7 +8,29 @@
     }
 
     &__content {
+        display: flex;
         justify-content: center;
         color: $fisrtcolor;
     }
+
+    &__search {
+        display: flex;
+    }
+}
+
+
+.principalNew {
+    display: flex;
+
+    &__footer {
+        width: 80%;
+        display: flex;
+        justify-content: space-between;
+            }
+
+    &__footautor {
+        display: inline;
+        align-content: center;
+    }
+    
 }
